--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -31,9 +31,10 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
         devtools \
         languageserver \
         git2r \
-        precommit \
         tinytex \
         httpgd \
+        remotes \
+        renv \
     && rm -rf /tmp/downloaded_packages
 
 
@@ -42,27 +43,11 @@ RUN apt-get update \
      && apt-get -y install --no-install-recommends libglpk-dev libv8-dev \
             pandoc-citeproc tmux
 
-# install and enable git lfs
-RUN apt-get -y install git-lfs && git-lfs install
-
-# add docthis
-RUN Rscript -e 'devtools::install_github("mdlincoln/docthis")'
-
-# install precommit
-RUN Rscript -e 'devtools::install_github("lorenzwalthert/precommit")'
-
-# install cmdstanr
-RUN Rscript -e 'devtools::install_github("stan-dev/cmdstanr")'
-
-# install cmdstan
-RUN mkdir -p /home/vscode/.cmdstan
-RUN Rscript -e 'cmdstanr::install_cmdstan("/home/vscode/.cmdstan")'
-RUN chmod -R ugo+rw /home/vscode/.cmdstan
-
 # make workspace directory
-RUN mkdir -p /eval-germany-sp-nowcasting
-RUN chmod -R ugo+rw /eval-germany-sp-nowcasting
+RUN mkdir -p /simplified-forecaster-evaluation
+RUN chmod -R ugo+rw /simplified-forecaster-evaluation
 
 # install dependencies
-COPY DESCRIPTION /tmp/package/DESCRIPTION
-RUN Rscript -e "devtools::install_deps('/tmp/package', dependencies = TRUE)"
+WORKDIR /simplified-forecaster-evaluation
+COPY renv.lock renv.lock
+RUN R -e 'renv::restore()'
