--- a/.github/workflows/build-and-publish-documentation.yaml
+++ b/.github/workflows/build-and-publish-documentation.yaml
@@ -21,23 +21,19 @@ jobs:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-pandoc@v2
       - uses: r-lib/actions/setup-r@v2
-      - uses: r-lib/actions/setup-r-dependencies@v2
-      - uses: r-lib/actions/setup-tinytex@v2
-
-      - name: Cache across documentation builds
-        uses: actions/cache@v2
+      - uses: r-lib/actions/setup-renv@2
         with:
-          path: '**/.cache'
-          key: caches
+          cache-version: 2
+      - uses: r-lib/actions/setup-tinytex@v2
 
       - name: Render project summary
         run: |
           rmarkdown::render("docs/index.Rmd", output_dir = "docs")
         shell: Rscript {0}
- 
-      - name: Render paper
+    
+- name: Render project paper
         run: |
-          rmarkdown::render("docs/paper.Rmd", output_dir = "docs")
+          rmarkdown::render("docs/paper/paper.Rmd", output_dir = "docs")
         shell: Rscript {0}
 
       - name: Upload documentation
