--- a/.github/workflows/build-and-publish-paper.yaml
+++ b/.github/workflows/build-and-publish-paper.yaml
@@ -26,14 +26,10 @@ jobs:
           cache-version: 2
       - uses: r-lib/actions/setup-tinytex@v2
 
-      - name: Render project summary
-        run: |
-          rmarkdown::render("docs/index.Rmd", output_dir = "docs")
-        shell: Rscript {0}
     
-- name: Render project paper
+      - name: Render project paper
         run: |
-          rmarkdown::render("docs/paper/paper.Rmd", output_dir = "docs")
+          rmarkdown::render("paper/paper.Rmd", output_dir = "docs")
         shell: Rscript {0}
 
       - name: Upload documentation
