--- a/.github/workflows/build-and-publish-paper.yaml
+++ b/.github/workflows/build-and-publish-paper.yaml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-pandoc@v2
       - uses: r-lib/actions/setup-r@v2
-      - uses: r-lib/actions/setup-renv@2
+      - uses: r-lib/actions/setup-renv@v2
         with:
           cache-version: 2
       - uses: r-lib/actions/setup-tinytex@v2
