--- a/.github/workflows/build-and-publish-paper.yaml
+++ b/.github/workflows/build-and-publish-paper.yaml
@@ -21,7 +21,7 @@ jobs:
       - uses: r-lib/actions/setup-renv@v2
         with:
           cache-version: 2
-      - uses: r-lib/actions/setup-tinytex@v
+      - uses: r-lib/actions/setup-tinytex@v2
       - name: Render
         run: |
           rmarkdown::render("paper/paper.Rmd", output_dir = "rendered-paper")
