--- a/.github/workflows/build-and-publish-paper.yaml
+++ b/.github/workflows/build-and-publish-paper.yaml
@@ -28,33 +28,23 @@ jobs:
           rmarkdown::render("paper/paper.Rmd", output_dir = "paper")
         shell: Rscript {0}
       - name: Upload
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-pages-artifact@v1
         with:
-          name: paper
-          retention-days: 5
-          path: paper
+          path: ./paper
 
+  # Deployment job
   publish-paper:
-    if: github.ref == 'refs/heads/main' && github.repository == 'epiforecasts/simplified-forecaster-evaluation'
+    if: github.event_name != 'pull_request'
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
     needs: render-paper
-    runs-on: macOS-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
     steps:
-    - uses: actions/checkout@v2
-    - name: Make a clean gh-pages branch
-      run: |
-        git checkout --orphan gh-pages
-        git rm -rf .
-    - uses: actions/download-artifact@v2
-      with:
-        name: paper
-        path: .
-    - name: Commit and push
-      run: |
-        git config user.email "action@github.com"
-        git config user.name "GitHub Action - Published paper"
-        git add --all
-        git commit -m "Published paper"
-        git push -f origin gh-pages:gh-pages
-        echo "paper published to GitHub"
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
