close #2 from @kathsherratt

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: simplified.forecaster
-Title: Evaluating a Simplified Forecast Model in Comparison to the ECDC Forecasting Hub Ensemble
+Title: Evaluating a Simplified Forecast Model in Comparison to the European Forecasting Hub Ensemble
 Description: This repository contains the documentation, results, and code of a
-   project evaluating a simplified forecasting model in comparison the ECDC
+   project evaluating a simplified forecasting model in comparison the European
    forecasting hub ensemble. See the documentation for further details. 
 Depends:
   rstan,
