--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: simplified.forecaster
-Title: Evaluating a Simplified Forecast Model in Comparison to the European Forecasting Hub Ensemble
+Title: Evaluating an Epidemiologically Motivated Surrogate Model of a Multi-Model Ensemble
 Description: This repository contains the documentation, results, and code of a
-   project evaluating a simplified forecasting model in comparison the European
-   forecasting hub ensemble. See the documentation for further details. 
+   project evaluating a simplified surrogate forecasting model in comparison
+   the European forecasting hub ensemble. See the documentation for further details. 
 Depends:
   rstan,
   data.table,
